--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
 			<version>5.0.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>4.29.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
