change base's name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=bank
-spring.datasource.url=jdbc:postgresql://localhost:5432/bank_test
+spring.datasource.url=jdbc:postgresql://localhost:5432/bank
 spring.datasource.username=postgres
 spring.datasource.password=ytpkbvtyz
 spring.jpa.hibernate.ddl-auto=none
