--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,4 +1,4 @@
-url=jdbc:postgresql://localhost:5432/bank_test
+url=jdbc:postgresql://localhost:5432/bank
 username=postgres
 password=ytpkbvtyz
 changeLogFile=classpath:/db/db.changelog-master.xml
